# updater

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  bump_version.sh  docs_refactor_hardener.py  pyproject.toml  release.sh  sync_trident.sh
.github/workflows/: docker-publish-yml  docker-publish.yml
docs/: _config.yml  architecture.md  changelog.md  cli-reference.md  configuration.md  contributing.md  deployment.md  development.md  getting-started.md  glossary.md  index.md  license.md  modules.md  rituals.md  roadmap.md  security.md  troubleshooting.md
docs/_includes/: sidebar.html
docs/_layouts/: default.html
docs/assets/css/: custom.css
logs/: logging.py
trident/: cli.py
trident/core/: channel.py  config.py  self_update.py
trident/veil/: CHANGELOG.md  Releases.md  __init__.py  cli.py  diagnostics.py  hardener.py  hardening_content.py  identity.py  logging.py  repair.py  self_update.py
trident/veil/docs/: _config.yml  architecture.md  changelog.md  cli-reference.md  configuration.md  contributing.md  deployment.md  development.md  getting-started.md  glossary.md  index.md  license.md  modules.md  rituals.md  roadmap.md  security.md  troubleshooting.md
trident/veil/docs/_includes/: sidebar.html
trident/veil/docs/assets/css/: custom.css
trident_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
veil/: CHANGELOG.md  Releases.md  __init__.py  cli.py  diagnostics.py  hardening_content.py  identity.py  logging.py  repair.py  self_update.py  updater.py
